kubernetes/apps/infra/cloudflared/base/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflared
